<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:padding="@dimen/default_vertical_margin"
    android:layout_height="wrap_content">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/category"
        android:textStyle="bold"
        android:textSize="@dimen/default_text_size"
        android:id="@+id/tvCategory"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/default_value_result"
        android:id="@+id/tvValueResult"
        android:textSize="@dimen/default_text_size"
        android:layout_below="@+id/tvCategory"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/default_comments"
        android:id="@+id/tvComment"
        android:textSize="@dimen/default_text_size"
        android:layout_below="@+id/tvValueResult"
        android:layout_alignLeft="@+id/tvValueResult"
        android:layout_alignStart="@+id/tvValueResult" />

</RelativeLayout>