<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@dimen/default_form_label_text_size"
            android:text="@string/search_by"
            android:id="@+id/tvInfo"
            android:layout_marginTop="50dp"
            android:textSize="18dp"/>

        <include layout="@layout/model_patient_form"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_height="wrap_content">
            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_marginRight="10dp"
                android:id="@+id/bClear" />

            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addPatient"
                android:layout_marginRight="10dp"
                android:id="@+id/bAdd" />

            <Button
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:id="@+id/bSearch"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_height="wrap_content">



            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/search_server"
                android:id="@+id/bSearchServer" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
