<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="8.27in"
    android:layout_height="11.69in"
    android:id="@+id/infoLLayout">
    <LinearLayout
        android:id="@+id/layoutHeader"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">


        <ImageView
            android:layout_width="200dip"
            android:layout_height="200dip"
            android:maxWidth="200dip"
            android:maxHeight="200dip"
            android:id="@+id/qrCode"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clinic"
                android:textSize="14pt"
                android:id="@+id/tvClinic"
                android:textStyle="bold"
                style="@style/TextStyle.blackbold"
                android:textDirection="anyRtl"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="14pt"
                android:id="@+id/tvPatientName"
                style="@style/TextStyle.blackbold"
                android:textDirection="anyRtl"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="14pt"
                android:id="@+id/tvDate"
                style="@style/TextStyle.blackbold"
                android:textDirection="anyRtl"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doctor_name"
                android:textSize="14pt"
                android:id="@+id/tvDoctor"
                style="@style/TextStyle.blackbold"
                android:textDirection="anyRtl"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutVisit"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_visit"
            android:id="@+id/tvNextVisitLabel"
            android:textStyle="bold"
            android:textSize="16pt"
            android:textIsSelectable="true"
            android:layout_margin="5dip"
            style="@style/TextStyle.blackbold"
            android:textDirection="anyRtl"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/tvNextVisitValue"
            android:textSize="16pt"
            android:layout_margin="5dip"
            style="@style/TextStyle.blackbold"
            android:textDirection="anyRtl"/>
    </LinearLayout>
    <!-- this is the size adjusted content -->
    <LinearLayout
        android:id="@+id/layoutDynamicContent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:id="@+id/medLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/active_meds"
            android:id="@+id/tvActiveMedsLabel"
            android:textStyle="bold"
            android:textSize="16pt"
            android:textIsSelectable="true"
            android:layout_margin="5dip"
            style="@style/TextStyle.blackbold"
            android:textDirection="anyRtl"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/tvMedication"
            android:textSize="16pt"
            android:layout_margin="5dip"
            style="@style/TextStyle.blackbold"
            android:textDirection="anyRtl"/>

        <TextView
            style="@style/TextStyle.blackbold"
            android:layout_width="4in"
            android:layout_height="wrap_content"
            android:text="@string/recomendations"
            android:textSize="14pt"
            android:textDirection="anyRtl"/>

        <TextView
            style="@style/TextStyle.blackbold"
            android:layout_width="4in"
            android:layout_height="wrap_content"
            android:id="@+id/tvRecords"
            android:textSize="12pt"
            android:textDirection="anyRtl"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/lifestyleLayout"
        android:layout_marginTop="0.25in"
        android:layout_marginBottom="0.25in">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lifestyle_scorecard"
            android:textSize="16pt"
            android:background="#000000"
            android:textColor="#ffffff"
            android:id="@+id/tvLifestyleScorecard"
            android:textStyle="bold"
            android:textDirection="anyRtl"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/lifestyleDiet"
            android:minHeight="128dip"
            android:measureWithLargestChild="false"
            android:background="@drawable/border2">

            <ImageView
                android:layout_width="128dip"
                android:layout_height="128dip"
                android:id="@+id/imageView0"
                android:src="@drawable/bananas1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/healthy_diet"
                android:id="@+id/tvScoreCard0"
                android:textSize="16pt"
                android:layout_margin="3dip"
                style="@style/lifestyleTextLeft"
                android:textDirection="anyRtl"/>

            <ImageView
                android:layout_width="128dip"
                android:layout_height="128dip"
                android:id="@+id/imgHealthyDiet"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/tvTPHealthyDiet"
                style="@style/lifestyleTextRight"
                android:textDirection="anyRtl"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:id="@+id/lifeStyleExercise"
            android:minHeight="128dip"
            android:background="@drawable/border2">

            <ImageView
                android:layout_width="128dip"
                android:layout_height="128dip"
                android:id="@+id/imageView3"
                android:src="@drawable/man459" />

            <TextView
                android:text="@string/physical_activity"
                android:id="@+id/tvScoreCard1"
                style="@style/lifestyleTextLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textDirection="anyRtl"/>

            <ImageView
                android:layout_width="128dip" android:layout_height="128dip" android:id="@+id/imgPhysicalActivity" android:longClickable="false"/>

            <TextView
                style="@style/lifestyleTextRight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/tvTPPhysicalActivity"
                android:textDirection="anyRtl"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:id="@+id/lifeStyleSmoking"
            android:minHeight="128dip"
            android:background="@drawable/border2">

            <ImageView
                android:layout_width="128dip"
                android:layout_height="128dip"
                android:id="@+id/imageView4"
                android:src="@drawable/cigarette" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tobacco_use"
                android:id="@+id/tvScoreCard2"
                android:layout_margin="3dip"
                style="@style/lifestyleTextLeft"
                android:textDirection="anyRtl"/>

            <ImageView
                android:layout_width="128dip" android:layout_height="128dip" android:id="@+id/imgTobaccoUse"/>

            <TextView
                style="@style/lifestyleTextRight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/tvTPTobaccoUse"
                android:textDirection="anyRtl"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:id="@+id/lifeStyleAlcohol"
            android:minHeight="128dip"
            android:background="@drawable/border2">

            <ImageView
                android:layout_width="128dip"
                android:layout_height="128dip"
                android:id="@+id/imageView5"
                android:src="@drawable/drink110" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/alcohol_use"
                android:id="@+id/tvScoreCard3"
                android:layout_margin="3dip" style="@style/lifestyleTextLeft"/>

            <ImageView
                android:layout_width="128dip" android:layout_height="128dip" android:id="@+id/imgAlcoholUse"/>

            <TextView
                style="@style/lifestyleTextRight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/tvTPAlcoholUse" />
        </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
