<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/default_horizontal"
    android:paddingRight="@dimen/default_horizontal"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:textSize="@dimen/default_large_text"
        android:id="@+id/tvUsername"
        android:layout_marginBottom="@dimen/default_horizontal"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <LinearLayout
                android:layout_weight="2"
                android:layout_marginLeft="@dimen/default_horizontal"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="0dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/pin_colon"
                    android:id="@+id/tvPIN"
                    />


                <EditText
                    android:id="@+id/etPIN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pin"
                    android:inputType="numberPassword"/>


            </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_vertical_margin"
            android:text="@string/forgot_pin"
            android:id="@+id/bForgotPIN"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_marginTop="@dimen/default_horizontal"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                    <Button
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel"
                        android:layout_marginRight="@dimen/default_horizontal"
                        android:id="@+id/bClear" />


                    <Button
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login"
                        android:layout_marginLeft="@dimen/default_horizontal"
                        android:id="@+id/bLogin" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
</LinearLayout>