<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="@dimen/default_vertical_margin"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minHeight="200dp"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            style="@style/TextStyle.black.small">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/TextStyle.black.small">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:id="@+id/textview_name"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_patient_name"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/tvPatientName"
                    android:textColor="@color/white"
                    android:gravity="right"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/TextStyle.black.small">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="51"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/tvPatientAge"
                    android:textColor="@color/white"
                    android:gravity="right"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/active_meds"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dip">
            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:id="@+id/lvActiveMeds"
                android:minHeight="150dip"/>

        </LinearLayout>



    </LinearLayout>
</ScrollView>